[gd_scene load_steps=5 format=3 uid="uid://h1mxvd5e3sek"]

[ext_resource type="Script" uid="uid://dd3da4ucg0crm" path="res://src/game/overlay/resource_ui_element.gd" id="1_2y46m"]
[ext_resource type="PackedScene" uid="uid://k52v1ivbl781" path="res://scenes/game/overlay/tooltips/explain_tooltip_template.tscn" id="3_07rf5"]
[ext_resource type="Script" uid="uid://beerc0adkd7x7" path="res://src/game/overlay/changeable_texture_rect.gd" id="3_621qp"]
[ext_resource type="Script" uid="uid://dw0vl0gb3ylf7" path="res://src/game/overlay/animated_changeable_label.gd" id="5_o8m7h"]

[node name="MarginContainer" type="MarginContainer"]
offset_right = 84.0
offset_bottom = 60.0
size_flags_vertical = 0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5
script = ExtResource("1_2y46m")

[node name="Scrap" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="ScrapIcon" type="TextureRect" parent="Scrap"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
tooltip_text = "SCRAP"
mouse_filter = 0
expand_mode = 2
stretch_mode = 5
script = ExtResource("3_621qp")
tooltip_template = ExtResource("3_07rf5")

[node name="ResourceValue" type="Label" parent="Scrap"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
tooltip_text = "0.0 / 0.0"
mouse_filter = 1
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_o8m7h")
time_for_animation = 0.5

[connection signal="image_changed" from="." to="Scrap/ScrapIcon" method="set_new_image"]
[connection signal="name_changed" from="." to="Scrap/ScrapIcon" method="name_changed"]
[connection signal="update_tooltip" from="." to="Scrap/ResourceValue" method="_update_tooltip"]
[connection signal="value_changed" from="." to="Scrap/ResourceValue" method="set_value_animated"]
